--- a/package.xml
+++ b/package.xml
@@ -2895,6 +2895,7 @@
         <members>ACTNRObj1__c-en_US</members>
         <members>ACTNRObj2__c-en_US</members>
         <members>ADDObj1__c-en_US</members>
+        <members>AR_Obj1__c-de</members>
         <members>AR_Obj1__c-en_US</members>
         <members>AR_Obj200__c-en_US</members>
         <members>AR_SFObj1__c-en_US</members>
