--- a/folder1/package.xml
+++ b/folder1/package.xml
@@ -4,6 +4,7 @@
         <members>A0</members>
         <members>A000</members>
         <members>A0071</members>
+        <members>A1456</members>
         <name>ApexClass</name>
     </types>
     <types>
