--- a/package.xml
+++ b/package.xml
@@ -4,6 +4,7 @@
         <members>A0</members>
         <members>A000</members>
         <members>A00000</members>
+        <members>A00000AADmnDec</members>
         <members>A00000ABdkKerh</members>
         <members>A00000AOZGddBpOrC</members>
         <members>A00000ASDXlkQJKQ</members>
