--- a/package.xml
+++ b/package.xml
@@ -4,4 +4,9 @@
         <members>ARProfile1</members>
         <name>Profile</name>
     </types>
+    <types>
+        <members>AccountContactMultiRoles</members>
+        <members>AccountContactRole</members>
+        <name>StandardValueSet</name>
+    </types>
 </Package>
