--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>51.0</version>
+    <version>52.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -391,5 +391,9 @@
     <types>
         <members>Case</members>
         <name>AssignmentRules</name>
+    </types>
+    <types>
+        <members>AccountContactMultiRoles</members>
+        <name>StandardValueSet</name>
     </types>
 </Package>
