--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>48.0</version>
+    <version>52.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -89,8 +89,6 @@
         <members>A55</members>
         <members>A56</members>
         <members>A57</members>
-        <members>A58</members>
-        <members>A59</members>
         <members>A6</members>
         <members>A600</members>
         <members>A602</members>
@@ -599,12 +597,17 @@
         <members>ACROBj1__c.Field7__c</members>
         <members>ACROBj1__c.Field8__c</members>
         <members>ACROBj1__c.field9__c</members>
+        <members>ACRObj1__c.Field2__c</members>
+        <members>ACRObj1__c.Field3__c</members>
+        <members>ACRObj1__c.Field4__c</members>
+        <members>ACRObj1__c.Field__c</members>
         <members>ACRameshObj2__c.f1__c</members>
         <members>ACTNROBJ11__c.Field1__c</members>
         <members>ACTNRObj1__c.ACTNRField1__c</members>
         <members>ACTNRObj2__c.Field1__c</members>
         <members>ACTRObj1__c.ACTRField1__c</members>
         <members>AC__c.Mu__c</members>
+        <members>ADDObj1__c.F1__c</members>
         <members>ARDemoObject5__c.TextField1__c</members>
         <members>ARObj151__c.feidl1__c</members>
         <members>AR_Obj1__c.F2__c</members>
@@ -1188,6 +1191,7 @@
         <name>CustomLabel</name>
     </types>
     <types>
+        <members>A1__c</members>
         <members>A2__c</members>
         <members>A3__c</members>
         <members>A4s__c</members>
@@ -1202,11 +1206,13 @@
         <members>ACR3__c</members>
         <members>ACR5__c</members>
         <members>ACROBj1__c</members>
+        <members>ACRObj1__c</members>
         <members>ACRameshObj2__c</members>
         <members>ACTNROBJ11__c</members>
         <members>ACTNRObj1__c</members>
         <members>ACTNRObj2__c</members>
         <members>ACTRObj1__c</members>
+        <members>ADDObj1__c</members>
         <members>ARDemoObject5__c</members>
         <members>ARObj151__c</members>
         <members>AR_Obj1__c</members>
@@ -2090,7 +2096,6 @@
         <name>ReportType</name>
     </types>
     <types>
-        <members>CEO</members>
         <members>ProfileRole</members>
         <name>Role</name>
     </types>
@@ -2238,6 +2243,7 @@
     </types>
     <types>
         <members>SRTest1</members>
+        <members>Saiest</members>
         <name>StaticResource</name>
     </types>
     <types>
