--- a/package.xml
+++ b/package.xml
@@ -589,6 +589,7 @@
         <members>Account.CustomerPriority__c</members>
         <members>Account.DandbCompanyId</members>
         <members>Account.Description</members>
+        <members>Account.Did_you_say_hello__c</members>
         <members>Account.DunsNumber</members>
         <members>Account.Fax</members>
         <members>Account.HelloAccounts__c</members>
