--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>52.0</version>
+    <version>51.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -1492,6 +1492,9 @@
         <members>PMO/Request_Description_Created_Updated</members>
         <members>PMO/Send_Email_To_Owner_Of_the_Request</members>
         <members>PMO/Send_Email_To_Submitter_of_the_Question</members>
+        <members>SET1</members>
+        <members>SET1/S1</members>
+        <members>SET1/S2</members>
         <members>Test123</members>
         <members>Test45</members>
         <members>Test45/TestEt1</members>
