--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>51.0</version>
+    <version>52.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -129,12 +129,6 @@
         <name>CustomObject</name>
     </types>
     <types>
-        <members>Campaign</members>
-        <members>EAC</members>
-        <members>EmailAdministration</members>
-        <name>EinsteinAgentSettings</name>
-    </types>
-    <types>
         <members>DLCObj18__c.All</members>
         <members>DLObj1__c.All</members>
         <name>ListView</name>
@@ -171,6 +165,7 @@
         <members>Customer Community User</members>
         <members>Customer Portal Manager Custom</members>
         <members>Customer Portal Manager Standard</members>
+        <members>Encadrant SBAD_ONICS</members>
         <members>External Identity User</members>
         <members>Force%2Ecom - App Subscription User</members>
         <members>Force%2Ecom - Free User</members>
@@ -206,5 +201,11 @@
         <members>Dbj1__c.Dbj_RC2</members>
         <members>Obj900__c.Obj900RC1</members>
         <name>RecordType</name>
+    </types>
+    <types>
+        <members>Campaign</members>
+        <members>EAC</members>
+        <members>EmailAdministration</members>
+        <name>Settings</name>
     </types>
 </Package>
