--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>52.0</version>
+    <version>51.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -557,10 +557,13 @@
         <members>ACROBj1__c.Field6__c</members>
         <members>ACROBj1__c.Field8__c</members>
         <members>ACROBj1__c.field4__c</members>
+        <members>ACRObj1__c.Field1__c</members>
         <members>ACRObj1__c.Field2__c</members>
         <members>ACRObj1__c.Field3__c</members>
-        <members>ACRObj1__c.Field4__c</members>
-        <members>ACRObj1__c.Field__c</members>
+        <members>ACRObj1__c.Field5__c</members>
+        <members>ACRObj1__c.Field6__c</members>
+        <members>ACRObj1__c.Field8__c</members>
+        <members>ACRObj1__c.field4__c</members>
         <members>ACTNROBJ11__c.Field1__c</members>
         <members>ACTNRObj2__c.Field1__c</members>
         <members>ACTRObj1__c.ACTRField1__c</members>
@@ -4527,6 +4530,8 @@
         <members>Default_Navigation</members>
         <members>Default_Navigation1</members>
         <members>Default_Navigation2</members>
+        <members>Test1</members>
+        <members>TestNM1</members>
         <name>NavigationMenu</name>
     </types>
     <types>
