--- a/package.xml
+++ b/package.xml
@@ -3797,6 +3797,9 @@
         <name>EmailServicesFunction</name>
     </types>
     <types>
+        <members>Aug18EmailFolder1</members>
+        <members>Aug18EmailFolder1/AugEt2</members>
+        <members>Aug18EmailFolder1/Tem144</members>
         <members>EmailTemp1</members>
         <members>Emf1</members>
         <members>Emf1/F1</members>
