--- a/package.xml
+++ b/package.xml
@@ -97,6 +97,7 @@
         <members>A7891</members>
         <members>A8</members>
         <members>A8971</members>
+        <members>A97</members>
         <members>A98</members>
         <members>A989</members>
         <members>A999</members>
