--- a/package.xml
+++ b/package.xml
@@ -443,6 +443,7 @@
     <types>
         <members>Default_Catch up</members>
         <members>Default_New1</members>
+        <members>Default_Test1233</members>
         <members>Default_TestCommunity</members>
         <name>Audience</name>
     </types>
